fix(header): correct logo link in the navigation bar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
                 <div class="menu-centro">
                     <div class="barra-conteiner centralizador">
                         <div class="logo esquerda">
-                            <a href="index.html"
+                            <a href="/"
                                 ><img src="assets/img/GK.png" alt="logo"
                             /></a>
                         </div>
